src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.Round67.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_strategy_merge")]
        internal static partial int XImgProcSelectiveSearchStrategyMerge(IntPtr strategy, int r1, int r2);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_strategy_multiple_add")]
        internal static partial int XImgProcSelectiveSearchStrategyMultipleAdd(IntPtr multiple, IntPtr strategy, float weight);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_strategy_multiple_clear")]
        internal static partial int XImgProcSelectiveSearchStrategyMultipleClear(IntPtr multiple);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_create")]
        internal static partial int XImgProcSelectiveSearchSegmentationCreate(out IntPtr segmentation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_release_handle")]
        internal static partial void XImgProcSelectiveSearchSegmentationReleaseHandle(IntPtr segmentation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_set_base_image")]
        internal static partial int XImgProcSelectiveSearchSegmentationSetBaseImage(IntPtr segmentation, IntPtr image);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_single_strategy")]
        internal static partial int XImgProcSelectiveSearchSegmentationSwitchToSingleStrategy(IntPtr segmentation, int k, float sigma);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_fast")]
        internal static partial int XImgProcSelectiveSearchSegmentationSwitchToFast(IntPtr segmentation, int baseK, int incK, float sigma);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_switch_to_quality")]
        internal static partial int XImgProcSelectiveSearchSegmentationSwitchToQuality(IntPtr segmentation, int baseK, int incK, float sigma);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_add_image")]
        internal static partial int XImgProcSelectiveSearchSegmentationAddImage(IntPtr segmentation, IntPtr image);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_clear_images")]
        internal static partial int XImgProcSelectiveSearchSegmentationClearImages(IntPtr segmentation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_add_graph_segmentation")]
        internal static partial int XImgProcSelectiveSearchSegmentationAddGraphSegmentation(IntPtr segmentation, IntPtr graphSegmentation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_clear_graph_segmentations")]
        internal static partial int XImgProcSelectiveSearchSegmentationClearGraphSegmentations(IntPtr segmentation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_add_strategy")]
        internal static partial int XImgProcSelectiveSearchSegmentationAddStrategy(IntPtr segmentation, IntPtr strategy);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_clear_strategies")]
        internal static partial int XImgProcSelectiveSearchSegmentationClearStrategies(IntPtr segmentation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_process_count")]
        internal static partial int XImgProcSelectiveSearchSegmentationProcessCount(IntPtr segmentation, out int rectCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_selective_search_segmentation_process_fill")]
        internal static partial int XImgProcSelectiveSearchSegmentationProcessFill(IntPtr segmentation, XImgProcRectNative[] rects, int rectCapacity, out int rectCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_covariance_estimation")]
        internal static partial int XImgProcCovarianceEstimation(IntPtr src, IntPtr dst, int windowRows, int windowCols);
    }
}
#endif
